@@ -1,6 +1,7 @@
 foswiki (1.0.7-1) stable; urgency=high
 
   * update to foswiki 1.0.7
+  * remove mod_perl bits - they're now in foswiki-modperlenginecontrib
 
  -- Sven Dowideit <SvenDowideit@fosiki.com>  Sun, 4 Oct 2009 09:53:40 +0100
 
